syntax = "proto3";

option csharp_namespace = "Protos.Pets.CreatePet";

import "google/type/datetime.proto";

package createpet;

message CreatePetRequest {
  string UserId = 1;
  string Contact = 2;
  string Name = 3;
  string Kennel = 4;
  string Pedigree = 5;
  string Chip = 6;
  google.type.DateTime Birthday = 7;
  google.type.DateTime Decease = 8;
  string UriToPhoto = 9;
  PetType Type = 10;

  repeated Vaccination Vaccinations = 11;
  repeated LostPetRecord Losts = 12;
}

message LostPetRecord {
  google.type.DateTime Lost = 1;
  google.type.DateTime Found = 2;
  string ExpectedArea = 3;
  repeated PetWasSeen WasSeen = 4;
}

message PetWasSeen {
  google.type.DateTime Seen = 1;
  string Area = 2;
}

enum PetType {
  PetType_Unspecified = 0;
  Dog = 1;
  Horse = 2;
  Cat = 3;
  Rabbit = 4;
}

message Vaccination {
  google.type.DateTime Date = 1;
  google.type.DateTime ValidUntil = 2;
  VaccinationType Type = 3;
  string Note = 4;
  string UriToPhoto = 5;
}

enum VaccinationType {
  VaccinationType_Unspecified = 0;
  Rabies = 1; // vzteklina
  Psinka = 2;
  Parvoviroza = 3;
  HepatitidaContagiosaCanis = 4;
  Leptospiroza = 5;
  Parainfluenza = 6;
  LymskaBorelioza = 7;
  Babesioza = 8;
  PlisnoveInfekce = 9;
  Leishmanioza = 10;
}
