syntax = "proto3";

option csharp_namespace = "Protos.Pets.DeletePet";

package deletepet;

message DeletePetRequest {
  string Id = 1;
}
