syntax = "proto3";

option csharp_namespace = "Protos.Pets.GetAllPets";

package getallpets;

message GetAllPetsRequest {

}
